data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_867.wast
;; 8. **Misalignment in Backward Jumps:**    - Create `br` instructions making backward jumps to a `loop` with mismatched backward branch parameters.    - **Constraint Checked:** Loop backward jump parameter consistency.    - **CFG Impact:** Incorrect backward jumps could create loops in CFG that do not align with valid execution paths.

(assert_invalid
  (module
    (func $misaligned-backward-jump 
      (loop (result i32) 
        (block 
          (br 1 (i32.const 1)) 
        ) 
      )
    )
  )
  "type mismatch"
)